# real-car-adas-monitor

./: CMakeLists.txt
data/: cut_obd_data.py  exercise_three.py  generate_obd_data.py
models/: generate_model.py  normalization_params.toml
src/: main.cc  obd_parser.cc  obd_parser.hpp  onnx_classifier.cc  onnx_classifier.hpp
tests/: test_obd_parser.cc
